[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sounds/OtherSounds/Sound_Hit_Shot_002.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/2D/Enemy/Sprite/SPRITE_enemyStaticTurretBlue_01.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemys/EnemyGravityTurret.gd" type="Script" id=3]
[ext_resource path="res://scenes/GameCode/EnemyGravityBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/3D/Textures/TEXTURE_Laser_01.png" type="Texture" id=5]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_gravityGunMuzzleFlash.tscn" type="PackedScene" id=6]

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/SPRITE_enemyStaticTurretOrange_01.png-ff0d41116fe6613471e8b578bccbfb09.stex"

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), SubResource( 5 ) ],
"loop": true,
"name": "GravityState",
"speed": 5.0
} ]

[sub_resource type="CylinderMesh" id=3]
height = 1.0
radial_segments = 12

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_texture = ExtResource( 5 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 15.39
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 5 )

[node name="EnemyGravityTurret" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25 )
collision_layer = 17
collision_mask = 17
gravity_scale = 3.0
continuous_cd = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 3 )
visionRange = 50.0
enemyGravityBulletSceneTemplate = ExtResource( 4 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1.5, 0 )
polygon = PoolVector2Array( -3.1, 0.4, -3.1, -0.7, -2.4, -0.7, -2.4, -1.5, -1.1, -1.5, -1.1, -0.9, 0.1, -0.9, 0.1, -1.5, 2.1, -1.5, 2.1, 0.2, 1.7, 0.2, 0.6, 0.9, 0.6, 1.3, -1.2, 1.2, -2.5, 0.4 )

[node name="FlipContainer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="FlipContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
frames = SubResource( 1 )
animation = "GravityState"

[node name="FireBulletPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.65, 1.35, 0 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
cast_to = Vector3( -1, 0, 0 )
collision_mask = 5
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 7.93139e-08, -1, 0, 0.04, 1.98285e-06, 0, 0, 0, 0.04, -2.65, 1.35, 0.2 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CooldownTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30178, 0 )
light_color = Color( 1, 0.890196, 0.890196, 1 )
omni_range = 7.0
omni_attenuation = 2.0

[node name="Shot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
unit_db = 15.547
bus = "Sound"

[node name="VFX_gravityGunMuzzleFlash" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8043, 1.3338, 0 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
